--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Wait for app
         run: |
-          for i in {1..10}; do curl -sS http://localhost:5000/ || sleep 3; done
+          for i in {1..10}; do curl -sS http://${{ steps.ip.outputs.ipv4 }}:5000/ || sleep 3; done
 
   newman-tests:
     runs-on: ubuntu-latest
